kubernetes/k3s-01/workloads/flower/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flower
  template:
    metadata:
      labels:
        app: flower
    spec:
      containers:
        - name: flower
          image: docker.io/mher/flower:2.2.0@sha256:29bebd8e7e04371162ab80cb3591e5a72808c71323b88b4ceec20799696b5a9b
          command:
            - "celery"
          args:
            - "flower"
            - "--port=5555"
            - "--persistent=True"
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
          ports:
            - name: http
              containerPort: 5555
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
