kubernetes/k3s-01/workloads/flower/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: flower
  namespace: monitoring
  labels:
    app: flower
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5555
      targetPort: 5555
      protocol: TCP
  selector:
    app: flower
