kubernetes/k3s-01/workloads/flower/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flower
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flower.47fc5c.com`)
      kind: Rule
      services:
        - name: flower
          kind: Service
          port: 5555
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: flower-certificate
