kubernetes/k3s-01/workloads/flower/network-policy.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flower
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      k8s:app: flower
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            k8s:app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "5555"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "5555"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: redis
            k8s:app: redis
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
